@@ -4,7 +4,7 @@
       "Erik Carlsson <info@code301.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.042, Dist::Iller version 0.1203, CPAN::Meta::Converter version 2.143240",
+   "generated_by" : "Dist::Zilla version 5.043, Dist::Iller version 0.1204, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "perl_5"
    ],
@@ -32,8 +32,8 @@
       },
       "develop" : {
          "requires" : {
+            "Dist::Iller::Config::Author::CSSON" : "0",
             "Dist::Zilla::Plugin::CheckChangesHasContent" : "0",
-            "Dist::Zilla::Plugin::CheckExtraTests" : "0",
             "Dist::Zilla::Plugin::Clean" : "0",
             "Dist::Zilla::Plugin::ConfirmRelease" : "0",
             "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
@@ -69,7 +69,13 @@
             "Dist::Zilla::Plugin::ReversionOnRelease" : "0",
             "Dist::Zilla::Plugin::RunExtraTests" : "0",
             "Dist::Zilla::Plugin::ShareDir" : "0",
+            "Dist::Zilla::Plugin::Test::Compile" : "0",
+            "Dist::Zilla::Plugin::Test::EOF" : "0",
+            "Dist::Zilla::Plugin::Test::EOL" : "0",
+            "Dist::Zilla::Plugin::Test::Kwalitee::Extra" : "0",
+            "Dist::Zilla::Plugin::Test::NoTabs" : "0",
             "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0",
+            "Dist::Zilla::Plugin::Test::Version" : "0",
             "Dist::Zilla::Plugin::TestRelease" : "0",
             "Dist::Zilla::Plugin::TravisYML" : "0",
             "Dist::Zilla::Plugin::UploadToCPAN" : "0",
@@ -89,6 +95,9 @@
             "Pod::Weaver::Section::Region" : "0",
             "Pod::Weaver::Section::Source::DefaultGitHub" : "0",
             "Pod::Weaver::Section::Version" : "0",
+            "Test::EOL" : "0",
+            "Test::More" : "0",
+            "Test::NoTabs" : "0",
             "Test::Pod" : "1.41",
             "Test::Warnings" : "0"
          }
@@ -96,10 +105,13 @@
       "runtime" : {
          "requires" : {
             "Dist::Zilla::File::InMemory" : "0",
+            "Moose" : "2.1400",
             "MooseX::AttributeDocumented" : "0",
+            "Path::Tiny" : "0",
             "Stenciller" : "0.1302",
             "String::Stomp" : "0",
             "Syntax::Feature::Qs" : "0.2004",
+            "namespace::autoclean" : "0.18",
             "perl" : "5.014000",
             "syntax" : "0"
          }
@@ -112,6 +124,8 @@
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
             "File::Temp" : "0",
+            "IO::Handle" : "0",
+            "IPC::Open3" : "0",
             "Path::Tiny" : "0",
             "String::Cushion" : "0",
             "Syntax::Feature::Qi" : "0",
@@ -125,7 +139,7 @@
    "provides" : {
       "Dist::Zilla::Plugin::Stenciller::HtmlExamples" : {
          "file" : "lib/Dist/Zilla/Plugin/Stenciller/HtmlExamples.pm",
-         "version" : "0.0102"
+         "version" : "0.0103"
       }
    },
    "release_status" : "stable",
@@ -140,6 +154,6 @@
          "web" : "https://github.com/Csson/p5-Dist-Zilla-Plugin-Stenciller-HtmlExamples"
       }
    },
-   "version" : "0.0102"
+   "version" : "0.0103"
 }
 
