@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.042.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.043.
 use strict;
 use warnings;
 
@@ -18,16 +18,21 @@ my %WriteMakefileArgs = (
   "NAME" => "Dist::Zilla::Plugin::Stenciller::HtmlExamples",
   "PREREQ_PM" => {
     "Dist::Zilla::File::InMemory" => 0,
+    "Moose" => "2.1400",
     "MooseX::AttributeDocumented" => 0,
+    "Path::Tiny" => 0,
     "Stenciller" => "0.1302",
     "String::Stomp" => 0,
     "Syntax::Feature::Qs" => "0.2004",
+    "namespace::autoclean" => "0.18",
     "syntax" => 0
   },
   "TEST_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "File::Temp" => 0,
+    "IO::Handle" => 0,
+    "IPC::Open3" => 0,
     "Path::Tiny" => 0,
     "String::Cushion" => 0,
     "Syntax::Feature::Qi" => 0,
@@ -36,7 +41,7 @@ my %WriteMakefileArgs = (
     "Test::More" => "0.96",
     "syntax" => 0
   },
-  "VERSION" => "0.0102",
+  "VERSION" => "0.0103",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -48,6 +53,9 @@ my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "File::Temp" => 0,
+  "IO::Handle" => 0,
+  "IPC::Open3" => 0,
+  "Moose" => "2.1400",
   "MooseX::AttributeDocumented" => 0,
   "Path::Tiny" => 0,
   "Stenciller" => "0.1302",
@@ -58,6 +66,7 @@ my %FallbackPrereqs = (
   "Test::DZil" => 0,
   "Test::Differences" => 0,
   "Test::More" => "0.96",
+  "namespace::autoclean" => "0.18",
   "syntax" => 0
 );
 
