@@ -1,12 +1,12 @@
-; This file was auto-generated from iller.yaml on 2016-01-10 15:28:40 UTC.
+; This file was auto-generated from iller.yaml on 2016-01-27 18:18:43 UTC.
 ; Used configs:
-; * Dist::Iller::Config::Author::CSSON: 0.0101
+; * Dist::Iller::Config::Author::CSSON: 0.0200
 
 name = Dist-Zilla-Plugin-Stenciller-HtmlExamples
 author = Erik Carlsson <info@code301.com>
 license = Perl_5
 copyright_holder = Erik Carlsson
-copyright_year = 2015
+copyright_year = 2016
 
 [Git::GatherDir]
 exclude_filename = META.json
@@ -82,6 +82,18 @@ directory = t/corpus
 
 [Git::Contributors]
 
+[Test::Kwalitee::Extra]
+
+[Test::NoTabs]
+
+[Test::EOL]
+
+[Test::EOF]
+
+[Test::Version]
+
+[Test::Compile]
+
 [Test::ReportPrereqs]
 
 [PodSyntaxTests]
@@ -89,8 +101,6 @@ directory = t/corpus
 [MetaYAML]
 
 [License]
-
-[CheckExtraTests]
 
 [RunExtraTests]
 
@@ -126,6 +136,7 @@ install_command = cpanm .
 [Clean]
 
 [Prereqs / DevelopRequires]
+Dist::Iller::Config::Author::CSSON = 0
 Pod::Elemental::Transformer::List = 0
 Pod::Elemental::Transformer::Splint = 0
 Pod::Weaver::Plugin::SingleEncoding = 0
@@ -142,14 +153,18 @@ Pod::Weaver::Section::Name = 0
 Pod::Weaver::Section::Region = 0
 Pod::Weaver::Section::Source::DefaultGitHub = 0
 Pod::Weaver::Section::Version = 0
+Test::NoTabs = 0
 Test::Warnings = 0
 
 [Prereqs / RuntimeRequires]
 Dist::Zilla::File::InMemory = 0
+Moose = 2.1400
 MooseX::AttributeDocumented = 0
+Path::Tiny = 0
 Stenciller = 0.1302
 String::Stomp = 0
 Syntax::Feature::Qs = 0.2004
+namespace::autoclean = 0.18
 perl = 5.014000
 syntax = 0
 
@@ -168,14 +183,18 @@ syntax = 0
 ; authordep syntax
 ; authordep Syntax::Feature::Qs
 ; authordep String::Stomp
+; authordep Moose
+; authordep namespace::autoclean
+; authordep Path::Tiny
 ; authordep MooseX::AttributeDocumented
 ; authordep Test::DZil
 ; authordep Test::Differences
-; authordep Path::Tiny
 ; authordep File::Temp
 ; authordep Syntax::Feature::Qi
 ; authordep String::Cushion
+; authordep Dist::Iller::Config::Author::CSSON
 ; authordep Test::Warnings
+; authordep Test::NoTabs
 ; authordep Test::More
 ; authordep Pod::Weaver::PluginBundle::CorePrep
 ; authordep Pod::Weaver::Plugin::SingleEncoding
