@@ -13,6 +13,9 @@ prereqs:
       - syntax
       - Syntax::Feature::Qs: 0.2004
       - String::Stomp
+      - Moose: 2.1400
+      - namespace::autoclean: 0.18
+      - Path::Tiny
       - MooseX::AttributeDocumented
 
   test:
