@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml on 2016-01-10 14:43:51 UTC.
+; This file was auto-generated from iller.yaml on 2016-01-27 18:15:21 UTC.
 ; Used configs:
-; * Dist::Iller::Config::Author::CSSON: 0.0101
+; * Dist::Iller::Config::Author::CSSON: 0.0200
 
 [@CorePrep]
 
@@ -11,6 +11,7 @@
 [Badges]
 badge = perl
 badge = travis
+badge = coverage
 formats = html, markdown
 
 [Version]
