@@ -12,8 +12,11 @@ Revision history for Dist-Zilla-Plugin-Stenciller-HtmlExamples
  [New Features]
 
  [Other Changes]
+  - No longer uses block package syntax, so should work on 5.10+ (once Stenciller does).
 
  [Requirements]
+  - New prereq: namespace::autoclean.
+  - Added missing prereqs: Moose, Path::Tiny.
 
  [Testing]
 
@@ -43,4 +46,3 @@ Revision history for Dist-Zilla-Plugin-Stenciller-HtmlExamples
 
 0.0100 2015-11-23T00:33:45Z UTC
  - Initial release
-
